--- a/src/main/core/plugin/monkey/win/ConfigDlg.form
+++ b/src/main/core/plugin/monkey/win/ConfigDlg.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="core.plugin.monkey.plugin.ConfigDlg">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="core.plugin.monkey.win.ConfigDlg">
   <grid id="27dc6" binding="contentPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="736" height="400"/>
@@ -12,17 +12,17 @@
         <properties/>
         <border type="none"/>
         <children>
-          <nested-form id="c4f2a" form-file="core/plugin/monkey/plugin/config/MainPanel.form" binding="mainPanel">
+          <nested-form id="c4f2a" form-file="core/plugin/monkey/plugin/win/MainPanel.form" binding="mainPanel">
             <constraints>
               <tabbedpane title="Main"/>
             </constraints>
           </nested-form>
-          <nested-form id="e8757" form-file="core/plugin/monkey/plugin/config/IgnorePanel.form" binding="ignorePanel">
+          <nested-form id="e8757" form-file="core/plugin/monkey/plugin/win/IgnorePanel.form" binding="ignorePanel">
             <constraints>
               <tabbedpane title="Ignore"/>
             </constraints>
           </nested-form>
-          <nested-form id="2c7f2" form-file="core/plugin/monkey/plugin/config/PercentPanel.form" binding="percentPanel">
+          <nested-form id="2c7f2" form-file="core/plugin/monkey/plugin/win/PercentPanel.form" binding="percentPanel">
             <constraints>
               <tabbedpane title="Percent"/>
             </constraints>
