--- a/src/main/core/plugin/monkey/win/IgnorePanel.form
+++ b/src/main/core/plugin/monkey/win/IgnorePanel.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="core.plugin.monkey.plugin.config.IgnorePanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="core.plugin.monkey.win.IgnorePanel">
   <grid id="27dc6" binding="contentPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="16" left="16" bottom="16" right="16"/>
     <constraints>
@@ -11,7 +11,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="fd725" class="javax.swing.JCheckBox" binding="ignoreCrashsCheckBox" default-binding="true">
+      <component id="fd725" class="javax.swing.JCheckBox" binding="ignoreCrashesCheckBox" default-binding="true">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -35,7 +35,7 @@
           <text value="Ignore security exceptions"/>
         </properties>
       </component>
-      <component id="cde5a" class="javax.swing.JCheckBox" binding="monitorNativeCrashsCheckBox" default-binding="true">
+      <component id="cde5a" class="javax.swing.JCheckBox" binding="monitorNativeCrashesCheckBox" default-binding="true">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -43,7 +43,7 @@
           <text value="Monitor native crashs"/>
         </properties>
       </component>
-      <component id="2618c" class="javax.swing.JCheckBox" binding="ignoreNativeCrashsCheckBox" default-binding="true">
+      <component id="2618c" class="javax.swing.JCheckBox" binding="ignoreNativeCrashesCheckBox" default-binding="true">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
