--- a/src/main/core/plugin/monkey/win/DeviceWin.form
+++ b/src/main/core/plugin/monkey/win/DeviceWin.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="core.plugin.monkey.win.MonkeyWin">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="core.plugin.monkey.win.DeviceWin">
   <grid id="27dc6" binding="contentPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -22,7 +22,7 @@
             <properties>
               <actionCommand value=""/>
               <alignmentY value="0.0"/>
-              <icon value="imgs/ic_run.png"/>
+              <icon value="icons/Run.png"/>
               <margin top="0" left="0" bottom="0" right="0"/>
               <maximumSize width="30" height="30"/>
               <minimumSize width="30" height="30"/>
@@ -35,7 +35,7 @@
             <properties>
               <alignmentY value="0.0"/>
               <focusTraversalPolicyProvider value="false"/>
-              <icon value="imgs/ic_stop.png"/>
+              <icon value="icons/Stop.png"/>
               <margin top="0" left="0" bottom="0" right="0"/>
               <maximumSize width="30" height="30"/>
               <minimumSize width="30" height="30"/>
@@ -50,7 +50,7 @@
             <constraints/>
             <properties>
               <alignmentY value="0.0"/>
-              <icon value="imgs/ic_scroll.png"/>
+              <icon value="icons/Scroll.png"/>
               <margin top="0" left="0" bottom="0" right="0"/>
               <maximumSize width="30" height="30"/>
               <minimumSize width="30" height="30"/>
@@ -63,7 +63,7 @@
             <properties>
               <alignmentY value="0.0"/>
               <focusTraversalPolicyProvider value="false"/>
-              <icon value="imgs/ic_clear.png"/>
+              <icon value="icons/Clear.png"/>
               <margin top="0" left="0" bottom="0" right="0"/>
               <maximumSize width="30" height="30"/>
               <minimumSize width="30" height="30"/>
@@ -79,7 +79,7 @@
             <properties>
               <alignmentY value="0.0"/>
               <focusTraversalPolicyProvider value="false"/>
-              <icon value="imgs/ic_setting.png"/>
+              <icon value="icons/Setting.png"/>
               <margin top="0" left="0" bottom="0" right="0"/>
               <maximumSize width="30" height="30"/>
               <minimumSize width="30" height="30"/>
