--- a/src/main/core/plugin/monkey/win/device/DebugPanel.form
+++ b/src/main/core/plugin/monkey/win/device/DebugPanel.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="core.plugin.monkey.win.IgnorePanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="core.plugin.monkey.win.device.DebugPanel">
   <grid id="27dc6" binding="contentPanel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="16" left="16" bottom="16" right="16"/>
     <constraints>
