--- a/src/main/core/plugin/monkey/win/device/EventPanel.form
+++ b/src/main/core/plugin/monkey/win/device/EventPanel.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="core.plugin.monkey.win.PercentPanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="core.plugin.monkey.win.device.EventPanel">
   <grid id="4f713" binding="contentPanel" layout-manager="GridLayoutManager" row-count="5" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="16" left="16" bottom="16" right="16"/>
     <constraints>
