--- a/src/main/core/plugin/monkey/win/device/GeneralPanel.form
+++ b/src/main/core/plugin/monkey/win/device/GeneralPanel.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="core.plugin.monkey.win.MainPanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="core.plugin.monkey.win.device.GeneralPanel">
   <grid id="27dc6" binding="contentPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="16" left="16" bottom="16" right="16"/>
     <constraints>
@@ -44,7 +44,7 @@
         </constraints>
         <properties/>
       </component>
-      <grid id="129c4" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="129c4" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -71,20 +71,6 @@
                 <item value="All"/>
               </model>
             </properties>
-          </component>
-          <component id="4b91f" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Output dir"/>
-            </properties>
-          </component>
-          <component id="5e7da" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="choseFileTxt">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
           </component>
         </children>
       </grid>
