--- a/src/main/core/plugin/monkey/win/device/GeneralPanel.form
+++ b/src/main/core/plugin/monkey/win/device/GeneralPanel.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="contentPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="16" left="16" bottom="16" right="16"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="743" height="400"/>
     </constraints>
     <properties/>
     <border type="none">
@@ -66,15 +66,15 @@
             </constraints>
             <properties>
               <model>
-                <item value="Simple"/>
-                <item value="Normal"/>
-                <item value="All"/>
+                <item value="Simple (-v)"/>
+                <item value="Normal (-v -v)"/>
+                <item value="All (-v -v -v)"/>
               </model>
             </properties>
           </component>
         </children>
       </grid>
-      <grid id="8db2d" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="5f7" layout-manager="GridLayoutManager" row-count="1" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -82,23 +82,15 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="8936" class="javax.swing.JLabel">
+          <component id="dfb8e" class="javax.swing.JLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Throttle(ms)"/>
+              <text value="Seed"/>
             </properties>
           </component>
-          <component id="324a8" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Count"/>
-            </properties>
-          </component>
-          <component id="62b42" class="javax.swing.JFormattedTextField" binding="throttleTxt">
+          <component id="f6be5" class="javax.swing.JTextField" binding="textField1" default-binding="true">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -106,13 +98,46 @@
             </constraints>
             <properties/>
           </component>
-          <component id="c78bb" class="javax.swing.JFormattedTextField" binding="countTxt">
+          <component id="8936" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Throttle"/>
+            </properties>
+          </component>
+          <component id="62b42" class="javax.swing.JFormattedTextField" binding="throttleTxt">
             <constraints>
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
             <properties/>
+          </component>
+          <component id="324a8" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Count"/>
+            </properties>
+          </component>
+          <component id="c78bb" class="javax.swing.JFormattedTextField" binding="countTxt">
+            <constraints>
+              <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="84818" class="javax.swing.JCheckBox" binding="infinityCheckBox" default-binding="true">
+            <constraints>
+              <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Infinity"/>
+              <toolTipText value="Loop monkey test until manually stop"/>
+            </properties>
           </component>
         </children>
       </grid>
