--- a/src/main/core/plugin/monkey/win/device/GeneralPanel.form
+++ b/src/main/core/plugin/monkey/win/device/GeneralPanel.form
@@ -128,7 +128,9 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value="1000"/>
+            </properties>
           </component>
           <component id="84818" class="javax.swing.JCheckBox" binding="infinityCheckBox" default-binding="true">
             <constraints>
